Basic app structure, removed redundant code, basic styles and layout.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,10 @@
-<!-- Place all UI elements intended to be present across all routes in this file -->
-<div class="app">
-  <div ui-view></div>
+<div class="site-container">
+  <header>
+    <h1>Where your money goes</h1>
+    <p>Payments made by Chichester District Council to individual suppliers with a value over £500 made within October.</p>
+    <hr />
+  </header>
+  <main>
+    <div ui-view></div>
+  </main>
 </div>
