--- a/src/app/common/pagination/pagination.scss
+++ b/src/app/common/pagination/pagination.scss
@@ -2,6 +2,7 @@
   text-align: center;
   width: 100%;
   .page-link {
+    vertical-align: top;
     width: 25px;
     height:25px;
     border: solid 1px #c6c6c6;
@@ -15,7 +16,9 @@
     text-decoration: none;
     box-shadow: 1px 1px 1px 0px rgba(0,0,0,0.12);
     &.active {
-        color: #ffffff;
+        color: #f2f2f2;
+        background: #676767;
+        box-shadow: inset 0px 0px 4px 4px rgba(0,0,0,0.1);
     }
   }
     .prev {
