--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -43,3 +43,25 @@ header {
   border-radius: 4px;
   box-shadow: 0px 0px 0px 8px rgba(0,0,0,0.05); 
 }
+
+
+@media 
+only screen and (max-width: 980px),
+(min-device-width: 620px) and (max-device-width: 980px)  {
+    .site-container {
+      margin: 0 auto;
+  }
+}
+
+@media 
+only screen and (max-width: 620px) and (max-device-width: 620px)  {
+
+  header {
+    h1 {
+      font-size: 30px;
+    }
+    p {
+    font-size: 14px;
+    }
+  }
+}
