--- a/src/app/components/payments/payment-details/payment-details.html
+++ b/src/app/components/payments/payment-details/payment-details.html
@@ -1,1 +1,20 @@
-test
+<h2>
+    Payment details
+</h2>
+<hr />
+<div class="row">
+    <span class="label">Supplier</span>
+    <span class="value">{{ $ctrl.payment.payment_supplier }}</span>
+</div>
+<div class="row">
+    <span class="label">Pound rating</span>
+    <span class="value"> <pound-rating rating="$ctrl.payment.payment_cost_rating"></pound-rating></span>
+</div>
+<div class="row">
+    <span class="label">Reference</span>
+    <span class="value">{{ $ctrl.payment.payment_ref }}</span>
+</div>
+<div class="row">
+    <span class="label">Value</span>
+    <span class="value">{{ $ctrl.payment.payment_amount | currency:"£":0 }}</span>
+</div>
