--- a/src/app/common/modal/modal.html
+++ b/src/app/common/modal/modal.html
@@ -1,4 +1,4 @@
-<div ng-if="$ctrl.open" class="modal" ng-class="{ 'open': $ctrl.open }">
+<div ng-if="$ctrl.open" class="modal animate" ng-class="{ 'open': $ctrl.open }">
   <div click-off="$ctrl.onClose()" class="modal-content">
     <span ng-click="$ctrl.onClose()" class="close">&times;</span>
     <div ng-transclude></div>
