--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,3 @@
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import "common/variables";
 @import "common/mixins";
 
@@ -33,6 +32,7 @@ header {
   margin-bottom: 20px;
   h1 {
     font-size: 60px;
+    margin: -10px 0 0 0;
   }
   p {
     font-size: 17px;
@@ -59,7 +59,8 @@ hr {
 only screen and (max-width: $media-screen-md) {
     .site-container {
       margin: 0 auto;
-  }
+      padding: 8px;
+    }
 }
 
 @media 
@@ -69,7 +70,7 @@ only screen and (max-width: $media-screen-sm)  {
       font-size: 30px;
     }
     p {
-    font-size: 14px;
+      font-size: 14px;
     }
   }
 }
