--- a/src/app/common/modal/modal.scss
+++ b/src/app/common/modal/modal.scss
@@ -24,7 +24,7 @@
     background-color: #fefefe;
     margin: 20% auto;
     padding: 20px;
-    width: 50%; /* Could be more or less, depending on screen size */
+    width: 50%;
 }
 
 .close {
