--- a/src/app/components/payments/payments-list/payments-list.scss
+++ b/src/app/components/payments/payments-list/payments-list.scss
@@ -22,7 +22,7 @@
       text-align: center;
       background-color: #eaeced;
       border-radius: 4px;
-      padding: 6px;
+      padding: 4px;
       margin: 0 4px;
       select {
         width: 150px;
@@ -90,13 +90,17 @@
     border-radius: 0 $border-radius 0 0;
   }
 
-  tr:last-child td:first-child {
-    border-radius: 0 0 0 $border-radius;
-  }
-
-  tr:last-child td:last-child {
-    border-radius: 0 0 $border-radius 0;
-  }
+  tr:last-child {
+    td {
+      border-bottom: 0;
+    }
+    td:first-child {
+        border-radius: 0 0 0 $border-radius;
+    }
+    td:last-child {
+        border-radius: 0 0 $border-radius 0;
+    }
+  } 
     
   .pound-rating-column {
     width: 180px;
@@ -106,7 +110,6 @@
     width: 100px;
   }
 }
-
 
 // no more tables concept based on https://css-tricks.com/responsive-data-tables/
 @media 
@@ -118,10 +121,14 @@ only screen and (max-width: $media-screen-sm)  {
   }
   .payments-table {
     display: block; 
-    thead, tbody, th, td, tr { 
+    thead, tbody, th, tr { 
       display: block; 
     }
-    
+    td {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     thead tr { 
       position: absolute;
       top: -9999px;
@@ -140,7 +147,6 @@ only screen and (max-width: $media-screen-sm)  {
       padding-left: 50% !important; 
       text-align: center !important;
       min-height: 30px;
-      line-height: 30px;
       pound-rating {
         padding-top: 5px;
       }
