--- a/src/app/components/payments/payments-list/payments-list.scss
+++ b/src/app/components/payments/payments-list/payments-list.scss
@@ -12,6 +12,7 @@
       &.submit {
           @include linear-gradient($brand-blue-1, $brand-blue-2);
           color: $white-base;
+          margin: 0;
       }
   }
   
